some reasonable min sizes

--- a/app/views/applayout.less
+++ b/app/views/applayout.less
@@ -17,9 +17,13 @@
             background: #fffcee;
             border-right: 1px solid #f0eee8;
             height: 100%;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
         .main {
             height: 100%;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
     }
 }
