bower install in build.sh

--- a/app/views/applayout.less
+++ b/app/views/applayout.less
@@ -9,7 +9,7 @@
         width: 100%;
         height: @top-height;
         background: linear-gradient(to bottom, #cdcdcd, #adadad);
-        border-bottom: 1px solid #8c8c8c;
+        border-bottom: 1px solid #9e9e9e;
     }
     > .row {
         height: 100%;
