--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -7,4 +7,5 @@ body {
     background: #fff;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 300;
+    font-size: 14px;
 }
