make .message.body width: 100%
this avoids alignment problems when the same 
message is composed of multiple lines but never
very wide. That would misalign .message.user
baseline compared to .message.body one

--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -95,6 +95,7 @@
                                 display: inline-block;
                                 overflow: hidden;
                                 padding-left: 10px;
+                                width: 100%;
                             }
                         }
                     }
