conversation: larger text, smaller timestamps

--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -6,6 +6,8 @@
 .applayout {
     height: 100%;
     padding: 0px;
+    font-size: 16px;
+    line-height: 1.3em;
 
     > .row {
         height: 100%;
@@ -81,11 +83,6 @@
                     height: ~"calc(100% - 60px)";
                     .message-list {
                         background-color: #fff;
-                        ._message:hover {
-                            .timestamp {
-                              display: inline-block;
-                            }
-                        }                        
                         .message {
                             display: block;
                             margin: 0px;
@@ -97,13 +94,15 @@
                             }
 
                             .timestamp {
-                              display: none;
+                              display: block;
+                              opacity: 0;
+                              font-size: x-small;
                               color: #aaa;
                               float: right;
                               padding-right: 15px;
                             }
                             &:hover .timestamp {
-                              display: inline-block;
+                              opacity: 1;
                             }
 
                             .body {
@@ -124,7 +123,7 @@
                         border: 2px solid #ddd;
                         border-radius: 3px;
                         padding: 3px 7px;
-                        font-size: 13px;
+                        font-size: 16px;
                         line-height: 20px;
                         width: 100%;
                         outline: none;
