--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -38,6 +38,12 @@
                 right: 0;
                 background-color: darken(@dark, 10%);
                 height: 60px;
+                img {
+                  width: 45px;
+                  float: left;
+                  margin-right: 8px;
+                  margin-left: -6px;
+                }
                 .status {
                     &:before {
                         content: "●";
