a bunch of minor things i don’t remember

--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -73,6 +73,9 @@
                             cursor: pointer;
                             color: lighten(@darktxt, 10%);
                         }
+                        &.selected {
+                          color: lighten(@darktxt, 20%);
+                        }
                     }
                 }
             }
