--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -5,8 +5,7 @@
     > .row {
         height: 100%;
         .left {
-            background: #fffcee;
-            border-right: 1px solid #f0eee8;
+            background: #f6f6f6;
             height: 100%;
             overflow-x: hidden;
             overflow-y: auto;
