--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -1,3 +1,16 @@
+// minimal reset
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html, body {
     height: 100%;
     overflow: hidden;
