--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -7,6 +7,8 @@
         border-right: 1px solid #b4b4b4;
         flex: none;
         width: 200px;
+        overflow-x: hidden;
+        overflow-y: auto;
     }
     > .right {
         flex: 1;
