--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -3,10 +3,14 @@
     padding-top: 15px;
     padding-bottom: 15px;
     .conv {
-        padding: 6px 15px 6px 15px;
-        white-space: nowrap;
+        padding: 8px 15px 8px 15px;
         text-overflow: ellipsis;
         overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        line-height: 22px;
+        max-height: 52px;
         cursor: pointer;
         &:hover {
             background: #bbb;
