--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -19,7 +19,8 @@ html, body {
 body {
     background: #fff;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-smoothing: antialiased;
     font-weight: 300;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 14px;
+    line-height: 24px;
 }
