--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -18,9 +18,12 @@ html, body {
 
 body {
     background: #fff;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: subpixel-antialiased;
     font-weight: 300;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 13px;
+    letter-spacing: 0.025em;
+    line-height: 18px;
 }
