--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -19,5 +19,8 @@
             background: #adf;
             cursor: auto;
         }
+        &.unread {
+            font-weight: 500;
+        }
     }
 }
