--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -10,42 +10,40 @@
             color: #999;
         }
         .ugroup {
+            margin-top: 15px;
+            position: relative;
             .sender {
                 text-decoration: none;
                 font-size: 11px;
                 color: #999;
-                padding-left: 13px;
+                img {
+                    border: none;
+                    width: 35px;
+                    position: absolute;
+                    top: 8px;
+                    left: 0;
+                    border-radius: 100px;
+                }
+                span {
+                    margin-left: 45px;
+                }
             }
             @radius: 13px;
             .umessages {
+                margin-left: 45px;
                 display: table;
-                max-width: ~"calc(100% - 80px)";
                 .message {
-                    background: #dedede;
-                    padding: 0 @radius;
                     padding-bottom: 5px;
-                    &:first-child {
-                        padding-top: 4px;
-                        border-top-left-radius: @radius;
-                        border-top-right-radius: @radius;
-                    }
-                    &:last-child {
-                        border-bottom-left-radius: @radius;
-                        border-bottom-right-radius: @radius;
-                        padding-bottom: 4px;
-                    }
                 }
             }
             &.self {
-                direction: rtl;
+                //direction: rtl;
                 .sender {
-                    padding-right: 13px;
                 }
                 .umessages {
-                    direction: ltr;
+                    //direction: ltr;
                     .message {
-                        background: #2d97f6;
-                        color: white;
+
                     }
                 }
             }
