better position/circle of image

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -19,10 +19,12 @@
                 img {
                     border: none;
                     width: 35px;
+                    height: 35px;
+                    object-fit: cover;
                     position: absolute;
-                    top: 7px;
+                    top: 5px;
                     left: 0;
-                    border-radius: 100px;
+                    border-radius: 50%;
                 }
                 span {
                     margin-left: 45px;
@@ -30,6 +32,7 @@
             }
             @radius: 13px;
             .umessages {
+                margin-top: -1px;
                 margin-left: 45px;
                 display: table;
                 .message {
