--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -37,6 +37,7 @@
                 display: table;
                 .message {
                     padding-bottom: 5px;
+                    white-space: pre;
                 }
             }
             &.self {
@@ -46,7 +47,6 @@
                 .umessages {
                     //direction: ltr;
                     .message {
-
                     }
                 }
             }
