pre-wrap, obviously

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -37,7 +37,7 @@
                 display: table;
                 .message {
                     padding-bottom: 5px;
-                    white-space: pre;
+                    white-space: pre-wrap;
                 }
             }
             &.self {
