placeholder flag for unconfirmed messages

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -38,6 +38,12 @@
                 .message {
                     padding-bottom: 5px;
                     white-space: pre-wrap;
+                    &.placeholder {
+                        color: #aaa;
+                        a {
+                            color: #aaa;
+                        }
+                    }
                 }
             }
             &.self {
