deal with attachments

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -44,6 +44,12 @@
                             color: #aaa;
                         }
                     }
+                    .attach {
+                        margin-top: 4px;
+                        img {
+                            max-height: 350px;
+                        }
+                    }
                 }
             }
             &.self {
