--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -27,3 +27,25 @@ body {
     letter-spacing: 0.025em;
     line-height: 20px;
 }
+
+@brand-primary:         #1269b0; // dark blue
+@brand-success:         #5cb85c; // green
+@brand-warning:         #c94646; // red
+@brand-danger:          #ffed00; // yellow
+@brand-info:            #5bc0de; // light blue
+
+.brand-primary {
+    color: @brand-primary;
+}
+.brand-success {
+    color: @brand-success;
+}
+.brand-warning {
+    color: @brand-warning;
+}
+.brand-danger {
+    color: @brand-danger;
+}
+.brand-info {
+    color: @brand-info;
+}
