--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -25,4 +25,15 @@
             border-top: 1px solid #b4b4b4;
         }
     }
+    > .info {
+        position: absolute;
+        top: 0;
+        right: 15px;
+        > div {
+            padding: 5px 10px;
+            border: 1px solid #b4b4b4;
+            border-top: none;
+            background: white;
+        }
+    }
 }
