--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -2,6 +2,16 @@
 .applayout {
     display: flex;
     height: 100%;
+    > .leftresize {
+        position: fixed;
+        top: 0;
+        left: 198px;
+        bottom: 0;
+        width: 5px;
+        z-index: 1;
+        flex: none;
+        cursor: ew-resize;
+    }
     > .left {
         background: #f0f0f0;
         border-right: 1px solid #b4b4b4;
