max width for photos

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -48,6 +48,8 @@
                         margin-top: 4px;
                         img {
                             max-height: 350px;
+                            max-width: 100%;
+
                         }
                     }
                 }
