max width for photos

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -49,6 +49,7 @@
                         img {
                             max-height: 350px;
                             max-width: 100%;
+                            border-radius: 8px;
 
                         }
                     }
