some more style

--- a/src/ui/views/convadd.less
+++ b/src/ui/views/convadd.less
@@ -1,12 +1,13 @@
 .convadd {
-  padding: 15px;
+  padding: 20px;
   h1 {
     font-family: Helvetica Neue;
     font-size: xx-large;
     margin-bottom: 20px;
   }
   hr {
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid #dedede;
+    margin-top: 20px;
     margin-bottom: 20px;
   }
 
@@ -15,19 +16,25 @@
       justify-content: center;
       align-items: center;
       > div {
-          padding: 12px 15px 10px;
           width: 100%;
+          padding: 0;
           input {
               width: 100%;
               resize: vertical;
+              padding: 3px;
               font-size: 14px;
-              line-height: 18px;
+              line-height: 22px;
               outline: none;
               border: 1px solid #dedede;
               border-radius: 3px;
-              padding: 3px 10px;
           }
       }
+  }
+
+  button {
+    padding: 10px;
+    font-size: 18px;
+    border-radius: 6px
   }
 
   ul {
