better image style

--- a/src/ui/views/convadd.less
+++ b/src/ui/views/convadd.less
@@ -52,7 +52,8 @@
       float: left;
       border: 3px solid white;
       > img {
-        width: 70px;
+        max-width: 70px;
+        max-height: 70px;
         border-radius: 9px;
       }
     }
