--- a/src/ui/css/fontello/css/fontello-codes.css
+++ b/src/ui/css/fontello/css/fontello-codes.css
@@ -15,3 +15,6 @@
 .icon-videocam:before { content: '\e80d'; } /* '' */
 .icon-phone:before { content: '\e80e'; } /* '' */
 .icon-picture:before { content: '\e80f'; } /* '' */
+.icon-pencil:before { content: '\e810'; } /* '' */
+.icon-bell:before { content: '\e811'; } /* '' */
+.icon-bell-off-empty:before { content: '\e812'; } /* '' */
